# agentic-exception-platform

./: .cursorconfig  .cursorrules  .dockerignore  .env.example  .gitignore  ADMIN_PLAYBOOKS_BUTTONS_REPORT.md  ADMIN_PLAYBOOKS_VERIFICATION.md  CATALOG_CLEAN_FIX.md  CLAUDE.md  COLON_FIX_VERIFIED.md  COLON_ISSUE_ANALYSIS.md  COLON_ISSUE_FINAL_ANALYSIS.md  COLON_PREFIX_FIX_COMPLETE.md  COLON_PREFIX_FIX_FINAL.md  COLON_PREFIX_FIX_VALIDATION.md  CRITICAL_ISSUES_ANALYSIS.md  DEMO_STATUS.md  DEMO_STEPS_PLAYBOOKS.md  DOMAIN_PACK_ACTIVATION_DEACTIVATION_FIX.md  DUPLICATE_EXCEPTION_FIX.md  Dockerfile  FINAL_COLON_FIX.md  FINAL_FIXES_APPLIED.md  FINAL_TEST_REPORT.md  HOW_TO_UPDATE_SEVERITY_OVERRIDES.md  LOW_SEVERITY_AUTO_EXECUTION_STATUS.md  Makefile  PACK_NAVIGATION_TEST_REPORT.md  PHASE11_BATCH1_IMPLEMENTATION.md  PHASE11_BATCH2_SUMMARY.md  PHASE11_COMPLETE_VERIFICATION.md  PHASE11_VERIFICATION_CHECKLIST.md  PHASE12_13_PACK_CONTENT_VIEWER_COMPLETE.md  PHASE12_13_PLAYBOOK_VISUALIZATION_COMPLETE.md  PHASE13_P2.5_VERIFICATION_CHECKLIST.md  PHASE13_PROMPT24_IMPLEMENTATION_COMPLETE.md  PHASE13_PROMPT3.7_COMPLETE.md  PHASE13_PROMPT3.7_VERIFICATION.md  PHASE13_PROMPT32_RETRIEVAL_SERVICE_COMPLETE.md  PHASE13_PROMPT4A_VERIFICATION_COMPLETE.md  (+66 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
alembic/: README.md  __init__.py  env.py
config/: llm-routing.sample.yaml
demo/: demoCatalog.json
docs/: 01-architecture.md  02-modules-components.md  03-data-models-apis.md  04-agent-templates.md  05-domain-pack-schema.md  06-mvp-plan.md  07-test-plan.md  08-security-compliance.md  09-tenant-onboarding.md  10-ui-guidelines.md  11-ui-phase4-mvp-plan.md  Arch-Diagram.md  CLAUDE_CONTEXT.md  COMPLETE_POSTGRES_INTEGRATION_REPORT.md  FINAL_TEST_REPORT.md  MVP_ISSUES_SUMMARY.md  P6-9-EVENT-SCHEMAS-COMPLETE.md  PHASE12_SETUP_GUIDE.md  PHASE1_STABILIZATION_PLAN.md  STATE_OF_THE_PLATFORM.md  TEST_REPORT.md  VERIFICATION_STEPS.md  WORKERS_QUICK_START.md  admin-ui-guide.md  audit-governance.md  configuration.md  (+41 more)
(+6252 files in other folders)
